--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "scripts" : {
-    "test": "jest"
+    "test": "jest" 
   },
   "devDependencies": {
     "jest": "^27.4.7",
     "supertest": "^6.2.2"
-  }
+  },
+"jest": {
+  "testPathIgnorePatterns": [
+    "/node_modules/",
+    "/build/",
+    "/__tests__/request.js"
+  ]
+}
 }
